reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__knowledge_context.rs_line_1079_col_9.log

*** crates/tracewake-core/src/epistemics/knowledge_context.rs:1079:9: replace KnowledgeContext::holder_known_context_hash -> &HolderKnownContextHash with Box::leak(Box::new(Default::default()))

*** mutation diff:
--- crates/tracewake-core/src/epistemics/knowledge_context.rs
+++ replace KnowledgeContext::holder_known_context_hash -> &HolderKnownContextHash with Box::leak(Box::new(Default::default()))
@@ -1071,17 +1071,17 @@
         self.debug_non_diegetic
     }
 
     pub fn holder_known_context_id(&self) -> &HolderKnownContextId {
         &self.holder_known_context_id
     }
 
     pub fn holder_known_context_hash(&self) -> &HolderKnownContextHash {
-        &self.holder_known_context_hash
+        Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
     }
 
     pub fn provenance_entries(&self) -> &[KnowledgeProvenanceEntry] {
         &self.provenance_entries
     }
 
     pub fn actor_known_workplaces(&self) -> &[ActorKnownWorkplaceFact] {
         &self.actor_known_workplaces


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `HolderKnownContextHash: Default` is not satisfied
    --> crates/tracewake-core/src/epistemics/knowledge_context.rs:1079:28
     |
1079 |         Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
     |                            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `HolderKnownContextHash`
     |
help: consider annotating `HolderKnownContextHash` with `#[derive(Default)]`
    -->  crates/tracewake-core/src/checksum.rs:521:1
     |
 521 + #[derive(Default)]
 522 | pub struct HolderKnownContextHash(String);
     |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `checksum::HolderKnownContextHash: Default` is not satisfied
    --> crates/tracewake-core/src/epistemics/knowledge_context.rs:1079:28
     |
1079 |         Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
     |                            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `checksum::HolderKnownContextHash`
     |
help: consider annotating `checksum::HolderKnownContextHash` with `#[derive(Default)]`
    -->  crates/tracewake-core/src/checksum.rs:521:1
     |
 521 + #[derive(Default)]
 522 | pub struct HolderKnownContextHash(String);
     |

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
